added new files

--- a/register.template.client.html
+++ b/register.template.client.html
@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<h1>Register</h1>
 
 <div>
     <label for="username">
@@ -18,8 +18,16 @@
            id="password"/>
 </div>
 
-<button>Login</button>
+<div>
+    <label for="password2">
+        Password
+    </label>
+    <input type="text"
+           placeholder="123qwe"
+           id="password2"/>
+</div>
 
-<a href="register.template.client.html">
-    Sign Up
+<button>Register</button>
+<a href="login.template.client.html">
+    Login
 </a>
