--- a/user-admin.template.client.html
+++ b/user-admin.template.client.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>User Admin</h1>
 
-</body>
-</html>
+<table border="1">
+    <thead>
+    <tr>
+        <th>Username</th>
+        <th>Password</th>
+        <th>First</th>
+        <th>Last</th>
+        <th>Email</th>
+        <th>Role</th>
+        <th>DOB</th>
+    </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>alice</td>
+            <td>*****</td>
+            <td>Alice</td>
+            <td>Wonderland</td>
+            <td>alice.wonderland@email.com</td>
+            <td>Faculty</td>
+            <td>
+                <button>Delete</button>
+                <button>Edit</button>
+            </td>
+        </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+</table>
